# mipt-network-gamedev

./: .gitignore  .gitmodules  README.md
week1/: CmakeLists.txt
week1/src/: client.cpp  message.hpp  server.cpp  socket_tools.cpp  socket_tools.hpp
week2/: CMakeLists.txt  build.sh
week2/src/: client.cpp  client.hpp  game_server.cpp  game_server.hpp  lobby_server.cpp  lobby_server.hpp
